<resources>
    <string name="app_name">Mashawery</string>

    <string name="tvDay">Day</string>
    <string name="tvMonth">Month</string>
    <string name="tvTime">Time</string>
    <string name="trips">Trips</string>
    <string name="profile">Profile</string>
    <string name="tvTripName">TripName</string>
    <string name="tvStartPoint">Start</string>
    <string name="tvDone">Done</string>
    <string name="tvCancelled">Canceled</string>
    <string name="tvTripHistory">Trip History</string>
    <string name="tvNewTripNotes">Create New Trip</string>
    <string name="btnAddNewNote">+</string>
    <string name="etNoteTitle">Title</string>
    <string name="etNoteDesc">Description ..</string>
    <string name="btnCancelNewNte">Cancel</string>
    <string name="btnSaveNewNote">Save</string>
    <string name="etSearchHistory">Type trip name ..</string>
    <string name="btnFinish">Finish</string>
    <string name="sync_success">Data sync successfully</string>
    <string name="sync_faild">Data sync is unsuccessfully</string>


    <string name="Signuplogo">SignUp</string>
    <string name="userName">enter your UserName</string>
    <string name="email">enter your Email</string>
    <string name="signup">Submit</string>
    <string name="login">login</string>
    <string name="donot_hava_account">Don\'t have an account? <u>Register</u></string>
    <string name="Have_an_account">Already  an account? <u>Login</u></string>
    <string name="action_settings">Settings</string>
    <string name="time_picker_example">Time Picker Example</string>
    <string name="time_pick">Pick the time and press save button</string>
    <string name="time_save">Save</string>
    <string name="time_selected"></string>
    <string name="time_current">The Time is:</string>
    <string name="button_save">Start</string>
    <string name="tvTripNameLabel">Trip Name:</string>
    <string name="tvStartPointLabel">Start Point:</string>
    <string name="tvEndPoint">End Point:</string>
    <string name="tvCreateNewTip">Create New Trip</string>
    <string name="enter_start_point">Enter start point</string>
    <string name="enter_trip_name">Enter trip name</string>
    <string name="enter_end_point">Enter end point</string>
    <string name="repetition">Repetition:</string>
    <string name="trip_type">Trip type:</string>
    <string name="next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="none">None</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="one_way">One way</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="update">Update</string>
    <string name="daily">Daily</string>
    <string name="snooze">Snooze</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_trip_title">Delete Trip?</string>
    <string name="are_you_sure_to_delete_trip">Are you sure that you want to delete trip?</string>
    <string name="delete_note">Delete Note?</string>
    <string name="are_you_sure_to_delete_note">Are you sure you want to delete this note?</string>



    <string name="sync_data">loading</string>
    <string name="please_wait">please Wait...</string>

    <string name="map_api_key" translatable="false">AIzaSyDzVXde0WUXvI46rNXrWRmlFADSzFsghbc</string>
    <string name="round_trip">Round trip</string>
    <string name="empty">Empty</string>


</resources>