<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp">

        <EditText
            android:id="@+id/etNoteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/custom_border_input"
            android:drawableStart="@drawable/icon_pen"
            android:drawableLeft="@drawable/icon_pen"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/etNoteTitle"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <EditText
            android:id="@+id/etNoteDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/custom_border_input"
            android:drawableStart="@drawable/stknt"
            android:drawableLeft="@drawable/stknt"
            android:ems="10"
            android:hint="@string/etNoteDesc"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:minLines="1"
            android:paddingLeft="10dp"
            android:singleLine="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNoteTitle"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <Button
            android:id="@+id/btnSaveNewNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/btnSaveNewNote"
            android:textAllCaps="false"
            app:backgroundTint="@color/dark_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNoteDesc" />

        <Button
            android:id="@+id/btnCancelNewNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/btnCancelNewNte"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/btnSaveNewNote"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>